--- a/ProjectGenius-Git/ProjectGenius-Frontend/public/css/student.css
+++ b/ProjectGenius-Git/ProjectGenius-Frontend/public/css/student.css
@@ -19,6 +19,10 @@
     justify-content: center;
     justify-content: space-between;
 }
+.sidebar ul {
+    width:100%;
+    padding-left:0;
+}
 .part-one {
     display: flex;
     flex-direction: column;
@@ -367,4 +371,8 @@
     font-size: 20px;
     margin-bottom: -3px;
     margin-left: 7px;
+}
+.side-bar ul{
+padding-left: 0;
+width: 100%;
 }
