--- a/ProjectGenius-Frontend/public/css/Fee.css
+++ b/ProjectGenius-Frontend/public/css/Fee.css
@@ -265,14 +265,18 @@
     width: 40%;
     display: flex;
     margin-top: 55px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
+
 .paywith {
     width: 70%;
     display: flex;
     justify-content: space-between;
     color: #acacac;
 }
-.paywith span {
+.paywith label {
     margin-left: 8px;
     font-size: 13px;
     position: relative;
@@ -285,17 +289,18 @@
     flex-direction: column;
     justify-content: space-evenly;
 }
-.pay-form h3 {
+.payment h3 {
     color: #ff80a6;
     padding-bottom: 7px;
     border-bottom: 2px solid #ccc;
     margin-top: 20px;
+    width: 100%;
 }
-.pay-form label {
+.payment label {
     font-size: 14px;
     font-weight: 600;
 }
-.pay-form input {
+.payment input {
     border: 1px solid #acacac;
     border-radius: 5px;
     margin-top: 5px;
@@ -303,10 +308,10 @@
     padding-left: 10px;
     outline: none;
 }
-.pay-form input[type="radio"]{
+.payment input[type="radio"]{
     height: auto;
 }
-.pay-form input[type="checkbox"]{
+.payment input[type="checkbox"]{
     height: auto;
 }
 .pay-box {
@@ -314,6 +319,11 @@
     flex-direction: column;
     width: 45%;
 }
+
+.pay label {
+    cursor: pointer;
+}
+
 .exp-cv {
     width: 100%;
     display: flex;
@@ -450,7 +460,7 @@
     .paywith {
         width: 90%;
     }
-    .pay span {
+    .pay label {
         font-size: 13px;
     }
     .apply input {
@@ -458,7 +468,7 @@
     }
 }
 @media(max-width:800px){
-    .pay span {
+    .pay label {
         font-size: 12px;
     }
     .card1 {
