--- a/ProjectGenius-Frontend/public/css/student.css
+++ b/ProjectGenius-Frontend/public/css/student.css
@@ -12,6 +12,7 @@
 .side-bar {
     width: 20%;
     background: #fcfad3;
+    height: 100vh;
     min-height: 600px;
     display: flex;
     flex-direction: column;
@@ -47,6 +48,10 @@
     color: #2d00f7;
     font-weight: 700;
 }
+.side-bar ul {
+    width: 100%;
+    padding-left: 0;
+}
 .side-bar ul li {
     list-style: none;
     font-size: 13px;
@@ -66,6 +71,7 @@
     padding-right: 10px;
     top: 4px;
 }
+
 .menu-bar{
     width: 150px;
 }
@@ -88,7 +94,7 @@
     cursor: pointer;
 }
 .middle-content {
-    width: 60%;
+    width: 80%;
     background-color: #f7f7f8;
 }
 .middle-header {
@@ -230,12 +236,40 @@
 }
 /* .student-right styles */
 .student-right {
-  width: 20%;
+  width: 35%;
   background-color: #fcfad3;
   display: flex;
   flex-direction: column; /* Change to column layout */
   justify-content: flex-start; /* Change to flex-start */
   align-items: center; /* Center items horizontally */
+  position: relative;
+  right: 0;
+  transition: opacity 0.3s ease;
+  z-index: 1;
+}
+
+/* .student-right-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #000000;
+    opacity: 0.1;
+    transition: all 0.2s ease-in;
+    z-index: 0;
+} */
+
+.close-btn {
+    background-color: transparent;
+    outline: none;
+    border: none;
+    color: var(--bs-body-color);
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 18px;
+    margin: 12px 14px;
 }
 
 /* .std-personal-info styles */
@@ -260,6 +294,14 @@
   color: #ff80a6;
   box-shadow: 4px 4px 5px #cacbcd;
   margin-bottom: 20px; /* Add margin to separate it from the other content */
+}
+
+.name-sort-btn {
+    background-color: transparent;
+    border: none;
+    color: #a3a3a3;
+    outline: none;
+    margin-left: 10px;
 }
 
 /* .std-history styles */
