--- a/ProjectGenius-Frontend/public/css/teacher.css
+++ b/ProjectGenius-Frontend/public/css/teacher.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 *{
     margin:0;
@@ -6,7 +5,7 @@
     box-sizing: border-box;
     font-family: 'poppins';
 }
-.container-one {
+.teacher {
     width: 100%;
     display: flex;
 }
@@ -24,7 +23,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 280px;
+    min-height: 320px;
     width: 100%;
 }
 .logo-content{
@@ -32,6 +31,10 @@
     display: flex;
     justify-content: center;
     margin-top: 15px;
+}
+.menu-item {
+    width: 100%;
+    margin-top: 30px;
 }
 .logo {
     width: 100px;
@@ -58,10 +61,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #706d87;
 }
-/* .side-bar ul li:first-child {
-    background: linear-gradient(to right,#dad8ff,#f3f1ff);
-} */
+
+.t-bar {
+    background: #fde2ca
+}
 .side-bar ul li img{
     position: relative;
     padding-right: 10px;
@@ -70,9 +75,16 @@
 .menu-bar{
     width: 150px;
 }
-/* .side-bar ul li:hover{
+.menu-bar a {
+    color: black;
+    text-decoration: none;
+}
+.side-bar ul li a:hover{
     color: #2d00f7;
-} */
+}
+.side-bar ul li:hover{
+    color: #2d00f7;
+}
 .part-two {
     display: flex;
     font-size: 12px;
@@ -88,14 +100,14 @@
     margin-left: 15px;
     cursor: pointer;
 }
-.right-content {
+.teacher-content {
     width: 80%;
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 .header {
-    width: 100%;
+    width: 95%;
     display: flex;
     min-height: 60px;
     align-items: center;
@@ -116,20 +128,26 @@
     font-size: 12px;
     margin-right: 30px;
 }
-.navigation {
-    width: 90%;
-    height: 40px;
-    margin-top: 20px;
+.r-header img {
+    cursor: pointer;
 }
-.person-details {
+.r-header input {
+    width: 250px;
+    border:1px solid #ccc;
+    outline: none;
+    border-radius: 4px;
+    height: 26px;
+    padding-left: 5px;
+}
+.teacher-details {
     width: 90%;
     border-radius: 20px;
     border:none;
     min-height: 400px;
     background: #f3f2ff;
-    margin-top: 25px;
+    margin-top: 45px;
 }
-.person-header {
+.teacher-header {
     height: 40px;
     display: flex;
     align-items: center;
@@ -139,10 +157,10 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
-.person-header span {
+.teacher-header span {
     padding-left: 15px;
 }
-form {
+.teacher-form {
     display: flex;
 }
 .form-left {
@@ -153,13 +171,13 @@ form {
     margin-top:5px;
     margin-left: 20px;
 }
-.field-box {
+.teach-box {
     width: 370px;
     display: flex;
     flex-direction: column;
     margin:10px 0px;
 }
-.field-box input {
+.teach-box input,select {
     height: 33px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -167,57 +185,30 @@ form {
     outline: none;
     padding-left: 10px;
 }
-.field-box i {
+.teach-box i {
     margin-right: 10px;
 }
-.field-box input[type='file'] {
+.teach-box input[type='file'] {
     display: none;
 }
-.field-box label {
+.teach-box label {
     font-size: 14px;
     color: #303972;
-    font-weight: 550;
+    font-weight: 600;
 }
-.field-box p {
+.teach-box p {
     color: black;
     font-weight: 600;
     margin-left: 5px;
 }
-.field-box textarea {
+.teach-box textarea {
     resize: none;
     border: 1px solid #ccc;
     height: 70px;
     border-radius: 4px;
-}
-
-/* date picker styles */
-
-.date-input-container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.date-input-container  input[type="date"] {
-    width: 30px !important;
-    border: none;
     outline: none;
-    background-color: transparent;
+    padding-left: 10px;
 }
-
-.date-input-container  input[type="text"] {
-    width: 100%;
-}
-
-
-.date-arrow-btn {
-    border: none;
-    background-color: transparent;
-    outline: none;
-    padding: 10px;
-    color: #9e9d9d;
-}
-
 .form-right {
     width: 50%;
     display: flex;
@@ -227,7 +218,7 @@ form {
     margin-top:5px;
     margin-left: 20px;
 }
-.photo {
+.t-photo {
     border: 1px dashed #4a5759;
     height:33px;
     display: flex;
@@ -241,21 +232,24 @@ form {
     margin-top: 5px;
     font-size: 12px;
 }
-.uploadfile {
+.t-photo span {
     color: #1d3557;
     margin-left: 5px;
     font-weight: 600;
 }
-.btnn{
+.t-btnn {
     width: 90%;
     margin-top: 10px;
     display: flex;
     justify-content: end;
 }
-.previous {
-    margin-right: 700px!important;
+.prev-btnn{
+    width: 90%;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
 }
-.btnn button {
+.t-btnn button, .prev-btnn button {
     background: #ff80a6;
     width: 130px;
     padding: 5px 5px;
@@ -266,67 +260,19 @@ form {
     margin-right: 20px;
     cursor: pointer;
 }
-.btnn button img {
+.prev-btnn button {
+    margin-left: 20px;
+}
+.t-btnn button a, .prev-btnn button a {
+    color: white;
+    font-size: 15px;
+    text-decoration: none;
+}
+.t-btnn button img, .prev-btnn button img {
     position: relative;
+    top: 2px;
     left: 10px;
     width: 20px;
-}
-::placeholder {
-    color: #ccc;
-    font-size: 12px;
-}
-@media(max-width:1050px){
-    .field-box {
-        width: 300px;
-    }
-    .field-box label {
-        font-size: 12px;
-    }
-    .history:before{
-        margin-left: 200px;
-    }
-}
-@media(max-width:800px){
-    .field-box {
-        width: 250px;
-    }
-    .form-left {
-        margin-left: 10px;
-    }
-    .part-two {
-        display: flex;
-        font-size: 10px;
-        padding-bottom: 15px;
-        align-items: center;
-        justify-content: center;
-    }
-    .part-two i {
-        font-size: 18px;
-        color: #ccc;
-        margin-left: 10px;
-        cursor: pointer;
-    }
-    .history:before{
-        margin-left: 150px;
-    }
-    .r-header {
-        width: 230px;
-    }
-    .proof {
-        display: none;
-    }
-}
-.adminlogout{
-    font-size: 25px;
-    margin-left: 20px;
-    border: none;
-    background: none;
-}
-.personicon{
-
-        margin-right: 10px;
-        margin-left: -10px;
-
 }
 .sub-btnn {
     width:90%;
@@ -345,111 +291,135 @@ form {
     margin-right: 20px;
     cursor: pointer;
 }
-.field-box input,select {
-    height: 33px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-top: 5px;
-    outline: none;
-    padding-left: 10px;
-}
-.text-error{
-     color:red;
-}
-
-.progressbar li {
-    list-style-type: none;
-    width: 25%;
-    float: left;
+::placeholder {
+    color: #ccc;
     font-size: 12px;
-    position: relative;
-    text-align: center;
-    color: #7d7d7d;
 }
-.progressbar li:before {
-    width: 30px;
-    height: 30px;
-    content: "";
-    line-height: 30px;
-    border: 2px solid #7d7d7d;
-    display: block;
-    text-align: center;
-    margin: 0 auto 10px auto;
-    border-radius: 50%;
-    background-color: white;
+@media(max-width:1050px){
+    .teach-box {
+        width: 300px;
+    }
+    .teach-box label {
+        font-size: 12px;
+    }
 }
-.progressbar li:after {
+@media(max-width:800px){
+    .teach-box {
+        width: 250px;
+    }
+    .form-left {
+        margin-left: 10px;
+    }
+    .part-two {
+        display: flex;
+        font-size: 10px;
+        padding-bottom: 15px;
+        align-items: center;
+        justify-content: center;
+    }
+    .part-two i {
+        font-size: 18px;
+        color: #ccc;
+        margin-left: 10px;
+        cursor: pointer;
+    }
+    .r-header {
+        width: 230px;
+    }
+    .proof {
+        display: none;
+    }
+}
+.tchr-table{
     width: 100%;
-    height: 2px;
-    content: '';
-    position: absolute;
-    background-color: #7d7d7d;
-    top: 15px;
-    left: -50%;
-    z-index: -1;
+    display: flex;
+    justify-content: center;
 }
-.progressbar li:first-child:after {
-    content: none;
+.tchr-info{
+    width: 95%;
+    border-collapse: separate;
+    border-spacing: 0px 7px;
 }
-.progressbar li.active {
-    color: green;
+.tchr-info th {
+    color: #979798;
+    font-size: 11px;
+   text-align: center;
 }
-.progressbar li.active:before {
-    border-color: #55b776;
-    background-color: #55b776;
+.tchr-row {
+    background: white;
+    font-size: 12px;
+    text-align: center;
+    /* box-shadow: 0px 4px 5px #cacbcd; */
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .5s;
 }
-.progressbar li.active + li:after {
-    background-color: #55b776;
+.tchr-row:hover {
+    box-shadow: 0px 4px 5px #cacbcd; 
 }
-.progressbar li.done:before {
-    border-color: #55b776;
-    background-color: #55b776;
+.tchr-row td{
+    padding: 5px 0px;
+    background: white;
+    font-weight: 600;
 }
-.progressbar li.done + li:after {
-    background-color: #55b776;
+.tchr-row td i {
+    color: #ccc;
 }
-.progressbar li.inactive:before {
-    border-color: #7d7d7d;
-    background-color: #7d7d7d;
+.tchr-row td:first-child{
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
 }
-.progressbar li.inactive + li:after {
-    background-color: #7d7d7d;
+.tchr-row td:last-child{
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.grade {
+    background-color: #fcfbd4;
+    color: red;
+    padding: 3px 20px;
+    border-radius: 25px;
+}
+.due1 {
+    background-color: #fce6e6;
+    color: red;
+    padding: 3px 20px;
+    border-radius: 25px;
+}
+.due2 {
+    color: #0fc478;
+    background-color: #e1f5ee;
+    padding: 3px 20px;
+    border-radius: 25px;
+}
+.profile {
+    width: 150px;
+    text-align: left;
+}
+.profile span {
+    position: relative;
+    bottom: 7px;
+    left: 4px;
+}
+.profile img {
+    width: 25px;
+    margin-left: 20px;
+}
+.rupee {
+    color: #fd0f56;
+}
+.notify{
+    background: white;
+    border-radius: 50%;
+    padding: 5px 7px 0px 7px;
+}
+.caret {
+    float: right;
+    margin-top: 5px;
+}
+ul {
+    position:relative;
+}
+.t-drop{
+    position :absolute;
 }
 
-.progressbar li.done {
-  font-size: 16px;
-  position: relative;
-}
-
-.progressbar li.done:after {
-  content: " ";
-  display: block;
-  width: 0.3em;
-  height: 0.6em;
-  border: solid white;
-  border-width: 0 0.2em 0.2em 0;
-  position: absolute;
-  left: 4.2em;
-  top: 26%;
-  margin-top: -0.2em;
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  z-index:9;
-  background-color: #55b776;
-}
-.container-two {
-    width: 600px;
-    margin-top: 20px; 
-}
-.mysidebar {
-    text-decoration: none;
-    color:black;
-}
-
-.activemysidebar {
-    color: #2d00f7 !important; 
-    font-weight: 500;
-}
- 
