--- a/ProjectGenius-Frontend/public/css/teacher-details.css
+++ b/ProjectGenius-Frontend/public/css/teacher-details.css
@@ -160,9 +160,11 @@
 }
 .doc-profile img {
     position: absolute;
-    width: 120px;
-    top: 60px;
+    width: 130px;
+    height: 120px;
+    top: 30px;
     left: 20px;
+    border-radius: 80px;
 }
 .tchr-adrs div {
     margin: 10px 0px;
