--- a/ProjectGenius-Frontend/public/css/student.css
+++ b/ProjectGenius-Frontend/public/css/student.css
@@ -9,7 +9,7 @@
     width: 100%;
     display: flex;
 }
-.side-bar {
+/* .side-bar {
     width: 20%;
     background: #fcfad3;
     height: 100vh;
@@ -62,11 +62,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
+} */
 /* .side-bar ul li:nth-child(2) {
     background: linear-gradient(to right,#dad8ff,#f3f1ff);
 } */
-.side-bar ul li img{
+/* .side-bar ul li img{
     position: relative;
     padding-right: 10px;
     top: 4px;
@@ -74,11 +74,11 @@
 
 .menu-bar{
     width: 150px;
-}
+} */
 /* .side-bar ul li:hover{
     color: #2d00f7;
 } */
-.part-two {
+/* .part-two {
     display: flex;
     font-size: 12px;
     padding-bottom: 15px;
@@ -92,7 +92,7 @@
     margin-top: 8px;
     margin-left: 15px;
     cursor: pointer;
-}
+} */
 .middle-content {
     width: 80%;
     background-color: #f7f7f8;
@@ -231,8 +231,10 @@
     left: 4px;
 }
 .profile img {
-    width: 25px;
-    margin-left: 20px;
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+    border-radius: 15px;
 }
 /* .student-right styles */
 .student-right {
@@ -294,6 +296,13 @@
   color: #ff80a6;
   box-shadow: 4px 4px 5px #cacbcd;
   margin-bottom: 20px; /* Add margin to separate it from the other content */
+}
+
+.std-image img {
+    border-radius: 50%;
+    width: 140px;
+    height: 130px;
+    margin-bottom: 10px;
 }
 
 .name-sort-btn {
@@ -409,4 +418,17 @@
     font-size: 20px;
     margin-bottom: -3px;
     margin-left: 7px;
+}
+
+/* pop-up-styles */
+
+.pop-up-button {
+    background-color: transparent !important;
+    padding: 0  !important;
+    line-height: 0 !important;
+    color: none !important;
+    outline: none !important;
+    border: none !important;
+    border-radius: 4px !important;
+    box-shadow: none !important;
 }
