--- a/ProjectGenius-Frontend/public/css/Fee.css
+++ b/ProjectGenius-Frontend/public/css/Fee.css
@@ -669,3 +669,8 @@
     width: 50%;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
