--- a/ProjectGenius-Frontend/public/css/teacher-details.css
+++ b/ProjectGenius-Frontend/public/css/teacher-details.css
@@ -9,7 +9,7 @@
     width: 100%;
     display: flex;
 }
-.side-bar {
+/* .side-bar {
     width: 20%;
     background: #fcfad3;
     min-height: 600px;
@@ -66,7 +66,7 @@
 /* .side-bar ul li:nth-child(5) {
     background: #fde2ca
 } */
-.t-bar {
+/* .t-bar {
     background: #fde2ca
 }
 .side-bar ul li img{
@@ -101,7 +101,7 @@
     margin-top: 8px;
     margin-left: 15px;
     cursor: pointer;
-}
+}  */
 .teacher-content {
     width: 80%;
     display: flex;
