--- a/ProjectGenius-Frontend/public/css/time-table.css
+++ b/ProjectGenius-Frontend/public/css/time-table.css
@@ -9,10 +9,13 @@
     width: 100%;
     display: flex;
 }
+.side-bar ul {
+    padding-left: 0!important;
+}
 .side-bar {
     width: 20%;
     background: #fcfad3;
-    min-height: 600px;
+    height: 600px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,7 +26,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 320px;
+    min-height: 370px;
     width: 100%;
 }
 .logo-content{
