--- a/ProjectGenius-Frontend/public/css/fee-setup.css
+++ b/ProjectGenius-Frontend/public/css/fee-setup.css
@@ -8,6 +8,8 @@
 .fee-collection {
     width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .fee-side-bar {
     width: 20%;
