--- a/ProjectGenius-Frontend/public/css/teacher.css
+++ b/ProjectGenius-Frontend/public/css/teacher.css
@@ -361,6 +361,7 @@
     padding: 5px 0px;
     background: white;
     font-weight: 600;
+    text-align: center;
 }
 .tchr-row td i {
     color: #ccc;
