--- a/ProjectGenius-Frontend/public/css/person.css
+++ b/ProjectGenius-Frontend/public/css/person.css
@@ -144,6 +144,9 @@
 }
 form {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
 }
 .form-left {
     width: 50%;
