--- a/ProjectGenius-Frontend/public/css/login.css
+++ b/ProjectGenius-Frontend/public/css/login.css
@@ -1,41 +1,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-*{
-    margin:0;
+
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'poppins';
 }
+
 .container1 {
     width: 100%;
     display: flex;
     align-items: start;
     justify-content: center;
-    overflow-x: hidden;
 }
+
 .rightcontent {
     width: 60%;
     background-color: #fbf8ba;
     border-radius: 25px;
     min-height: 650px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-   
+    gap: 20px 0px;
 }
+
 .leftcontent {
     position: relative;
     width: 40%;
     min-height: 650px;
 }
+
 .ellipse {
     width: 250px;
 }
+
 .kids {
     position: absolute;
     top: 120px;
     left: 80px;
     width: 100%;
 }
+
 .sign-in {
     background-color: #fff;
     border-radius: 20px;
@@ -44,15 +51,17 @@
     justify-content: center;
     padding-bottom: 30px;
 }
-.loginform{
+
+.loginform {
     width: 600px;
-    height: 450px;
+    min-height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     justify-content: space-evenly;
 }
+
 .field input {
     width: 520px;
     border: 2px solid #ccc;
@@ -62,24 +71,35 @@
     margin-top: 10px;
     outline: none;
 }
+
 .field input:focus {
     border: 2px solid #72ddf7;
 }
+
 .field label {
     color: #ccc;
 }
+
 ::placeholder {
-    color: #ccc!important;
+    color: #ccc !important;
 }
+
 form h2 {
-    color: #2d00f7;
+    background: linear-gradient(96deg, rgba(96, 91, 255, 1) 0%, rgba(224, 5, 228, 0.53) 75%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    font-weight: 600;
 }
+
 .logo {
     position: relative;
 }
+
 .logo img {
     width: 35px;
 }
+
 .logo span {
     position: absolute;
     left: 10px;
@@ -87,10 +107,12 @@ form h2 {
     font-size: 17px;
     color: #2d00f7;
 }
+
 form h3 {
     width: 520px;
     margin-top: 20px;
 }
+
 .log {
     width: 520px;
     border-radius: 25px;
@@ -102,136 +124,206 @@ form h3 {
     margin-top: 10px;
     cursor: pointer;
 }
+
 .ell {
     display: none;
 }
-@media(max-width:1050px){
+/* teacher-login */
+.tech {
+    position: absolute;
+    top: 135px;
+    left: 50px;
+}
+/* teacher-login */
+/* teacher-signup */
+.teacher-signup{
+    position: absolute;
+    top:60px;
+    left:30px;
+}
+/* teacher-signup */
+.field{
+    width:85%;
+}
+@media(max-width:1050px) {
     .ellipse {
         width: 200px;
     }
+
     .kids {
         position: absolute;
         top: 90px;
         left: 60px;
     }
+    /* teacher-login */
+    .tech {
+        width: 97%;
+    }
+    /* teacher-login */
     .field input {
         border: 1px solid #ccc;
         width: 400px;
     }
+
     .log {
         width: 400px;
     }
+
     form h3 {
         width: 400px;
     }
+
     .loginform {
         width: 450px;
         height: 400px;
     }
-    .rightcontent{
+
+    .rightcontent {
         min-height: 500px;
     }
-    .leftcontent{
+
+    .leftcontent {
         min-height: 550px;
     }
 }
-@media(max-width:800px){
+
+@media(max-width:800px) {
     .ellipse {
         width: 150px;
     }
+
     .kids {
         position: absolute;
         top: 70px;
         left: 40px;
     }
+       /* teacher-login */
+    .tech {
+        width: 100%;
+        position: absolute;
+        left: 20px;
+    }
+       /* teacher-login */
     .field input {
         width: 320px;
     }
+
     .log {
         width: 320px;
     }
+
     form h3 {
         width: 320px;
     }
+
     .loginform {
         width: 400px;
         height: 350px;
     }
+
     .form-label {
-        margin-bottom: -0.5rem!important;
+        margin-bottom: -0.5rem !important;
     }
 }
-@media(max-width:500px){
+
+@media(max-width:740px) {
     .container1 {
         display: flex;
         flex-direction: column;
     }
-    .leftcontent{
+
+    .leftcontent {
         width: 100%;
     }
-    .rightcontent{
+
+    .rightcontent {
         width: 100%;
     }
+
     .ellipse {
         display: none;
     }
+
     .ell {
         display: block;
         float: right;
         width: 150px;
     }
+
     .kids {
         position: absolute;
         top: -20px;
-        left:10px;
+        left: 10px;
         z-index: 2;
     }
+   /* teacher-login */ 
+    .tech {
+    width: 80%;
+    position: absolute;
+    left:30px;
+    top: 80px;
+    z-index: 2;
+    }
+     /* teacher-login */
     .loginform {
         min-height: 450px;
     }
+
     .leftcontent {
         min-height: 300px;
     }
-    .rightcontent{
+
+    .rightcontent {
         min-height: 700px;
         display: flex;
-        align-items: end;
         padding-bottom: 20px;
     }
 }
-@media(max-width:380px){
+@media(max-width:380px) {
     .ell {
         width: 130px;
     }
+
     .kids {
         position: absolute;
         top: -20px;
-        left:50px;
+        left: 50px;
         z-index: 2;
         width: 270px;
+    }
+    .tech{
+        width: 70%;
+        position: absolute;
+        top: 20px;
     }
     .field input {
         width: 320px;
         border: 1px solid #ccc;
         border-radius: 25px;
     }
+
     .log {
         width: 320px;
     }
+
     .loginform {
         width: 360px;
     }
+
     form h3 {
         width: 320px;
     }
+
     .logo {
         position: relative;
         right: 25px;
         top: 25px;
     }
+
     .logo img {
         width: 25px;
     }
+
     .logo span {
         position: absolute;
         left: 5px;
@@ -240,7 +332,8 @@ form h3 {
         font-weight: 900;
         color: #2d00f7;
     }
-    .rightcontent{
+
+    .rightcontent {
         background-color: #fbf8ba;
         z-index: 1;
         position: relative;
@@ -248,30 +341,40 @@ form h3 {
         border-radius: 30px;
     }
 }
-@media(max-width:340px){
+
+@media(max-width:340px) {
     .ell {
         width: 110px;
     }
+
     .kids {
         position: absolute;
         top: -20px;
-        left:25px;
+        left: 25px;
         z-index: 2;
         width: 270px;
+    }
+    .tech{
+        position: absolute;
+        top: 20px;
     }
     .log {
         width: 280px;
     }
+
     .loginform {
         width: 300px;
     }
+
     form h3 {
         width: 280px;
     }
+
     .field input {
         width: 280px;
     }
 }
-.error-message{
-    color:red;
+.error-message {
+    color: red;
 }
+
