--- a/ProjectGenius-Frontend/public/css/attendance-mark.css
+++ b/ProjectGenius-Frontend/public/css/attendance-mark.css
@@ -7,6 +7,7 @@
 }
 .attendance {
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction:column;
 }
@@ -89,20 +90,18 @@
     background-color: #f6f9ff;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    justify-content: space-evenly;
 }
 .class-details {
     width: 80%;
     min-height: 100px;
     display: flex;
     align-items: center;
-    justify-content: center;
     justify-content: space-evenly;
     background: #fcfad3;
     border-radius: 7px;
     padding: 10px 0px 20px 0px;
+    margin: 28px 0px;
 }
 .std-class {
     width: 100px;
@@ -114,25 +113,36 @@
     border: 1px solid #ced4da;
     border-radius: 5px;
 }
+.std-class input[type="date"] {
+    height: 33px;
+    padding: 0px 0px 0px 10px;
+}
 .sheet-button {
-    padding: 6px 12px;
+    padding: 7px 12px;
     border-radius: 6px;
     color: white;
     background: #ff3672;
     border: none;
-    font-size: 13px;
+    font-size: 12px;
+    margin-top: 21px;
     cursor: pointer;
 }
 .att-record {
     width: 80%;
-    min-height: 300px;
+    max-height: 300px;
     background: #ffffff;
     padding: 25px 0px;
     border-radius: 7px;
+    position: relative;
+    overflow-y: scroll;
 }
 .sheet {
     width: 100%;
+    height: 100%;
     text-align: center;
+}
+.sheet thead {
+    position: sticky;
 }
 .sheet-head {
     text-align: center;
