--- a/ProjectGenius-Frontend/public/css/attendance-mark.css
+++ b/ProjectGenius-Frontend/public/css/attendance-mark.css
@@ -126,13 +126,14 @@
     font-size: 12px;
     margin-top: 21px;
     cursor: pointer;
+   
 }
 .att-record {
     width: 80%;
     max-height: 300px;
     background: #ffffff;
-    padding: 25px 0px;
-    border-radius: 7px;
+    padding: 0px 0px 25px 0px;
+    border-radius: 0px 0px 7px 7px;
     position: relative;
     overflow-y: scroll;
 }
@@ -141,14 +142,16 @@
     height: 100%;
     text-align: center;
 }
-.sheet thead {
+.sheet th {
     position: sticky;
+    top: 0;
+    z-index: 1;
+    background: #f9f6b8;
 }
 .sheet-head {
     text-align: center;
     color: #2b4c87;
     font-size: 13px;
-    background: #f9f6b8;
 }
 .sheet-head th {
     padding: 7px 0px;
@@ -190,6 +193,7 @@
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 1px;
+    margin-top:16px;
 }
 .att-record p:first-child {
     color: #012970;
@@ -295,6 +299,31 @@
 .teacher-logout span {
     margin-left: 10px;
 }
+.attendance-error{
+    color: red;
+    font-size: 10px;
+    position: absolute;
+    top: 98%;
+}
+
+ /* scrollbar style  */
+
+.att-sheet ::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+   /* Track  */
+.att-sheet ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 3px #bababa; 
+    border-radius: 10px;
+  }
+   
+   /* Handle  */
+.att-sheet ::-webkit-scrollbar-thumb {
+    background: #012a70ba; 
+    border-radius: 10px;
+  }
+/* scrollbar style  */
 @media(max-width:800px){
     .am a {
         font-size: 12px;
