--- a/ProjectGenius-Frontend/public/css/attendance-mark.css
+++ b/ProjectGenius-Frontend/public/css/attendance-mark.css
@@ -108,6 +108,7 @@
     display: flex;
     flex-direction: column;
     color: #858585;
+    position: relative;
 }
 .std-class select,input {
     border: 1px solid #ced4da;
