--- a/ProjectGenius-Frontend/public/css/student.css
+++ b/ProjectGenius-Frontend/public/css/student.css
@@ -463,3 +463,63 @@
     justify-content: center;
     align-items: center;
 }
+/* select box */
+.select-checkbox {
+    height: 1rem;
+    width: 1rem;
+    margin: 0px 0px 0px 6px;
+    cursor: pointer;
+}
+
+.select-checkbox input {
+    appearance: none;
+    display: none;
+}
+.select-checkbox span {
+    position: relative;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    background:transparent;
+}
+.select-checkbox span::before {
+    position: absolute;
+    content: '';
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: #ccc;
+    transition: .5s;
+    box-shadow: 0 -19px 0 #ccc;
+}
+.select-checkbox span::after {
+    position: absolute;
+    content: '';
+    bottom: 0;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: #ccc;
+    transition: .5s;
+    box-shadow: 18px 0 0 #ccc;
+}
+.select-checkbox input:checked ~ span::before {
+    background: #2d00f7;
+    box-shadow: 0 0 0 transparent;
+}
+.select-checkbox input:checked ~ span::after {
+    background: #2d00f7;
+    box-shadow: 0 0 0 transparent;
+    height: 50%;
+}
+.select-checkbox input:checked ~ span {
+    transform: rotate(-45deg) translate(5px,-4px);
+}
+
+.students-select-controll {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+}
