--- a/ProjectGenius-Frontend/public/css/fee-setup.css
+++ b/ProjectGenius-Frontend/public/css/fee-setup.css
@@ -236,3 +236,92 @@
         width: 230px;
     }
 }
+
+/* Teacher Schedule Styles */
+
+.teacher-schedule-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 0.5rem 0;
+}
+
+.teacher-schedule-form {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 90%;
+    margin-bottom: 1rem;
+}
+
+.teacher-schedule-input {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    margin: 8px 0px;
+}
+
+.teacher-schedule-input label {
+    color: #303972;
+    font-size: 13px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+.teacher-schedule-input input {
+    height: 33px;
+    border: 1px solid #c1bbeb;
+    border-radius: 4px;
+    outline: none;
+    padding-left: 10px;
+}
+
+.teacher-schedule-controls {
+    display: flex;
+    justify-content: space-between;
+    width: 40%;
+}
+
+.teacher-schedule-controls .teacher-schedule-input {
+    width: 46%;
+}
+
+.teacher-schedule-controls .class-section-input {
+    width: 25%;
+}
+
+.teacher-schedule-btn {
+    width: 90%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.teacher-schedule-btn button {
+    width: 150px;
+    border-radius: 16px;
+    background: #ff80a6;
+    color: white;
+    padding: 5px 0px;
+    border: none;
+}
+
+/* Timetable Preview Style */
+
+.time-table-preview {
+    width: 90%;
+    margin: 1.5rem 0;
+}
+
+.schedulesubmit {
+    width: 150px;
+    border-radius: 16px;
+    background: #ff80a6;
+    color: white;
+    padding: 5px 0px;
+    border: none;
+    margin-top: 2rem;
+}
