--- a/ProjectGenius-Frontend/public/css/time-table.css
+++ b/ProjectGenius-Frontend/public/css/time-table.css
@@ -342,7 +342,33 @@
     color: #dd0505;
     font-size: 11px;
 }
+.assign-schedule {
+    width: 80%;
+    height: 460px;
+    margin: 1rem 0;
+}
 
+.assign-schedule img {
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
+}
+
+.assign-button {
+    animation: breath 2s ease-in-out 0s infinite both;
+}
+
+@keyframes breath {
+    0% {
+        transform: scale(1.1);
+    }
+    50% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1.1);
+    }
+  }
 @media(max-width:800px) {
     .subject {
         font-size: 9px;
