--- a/ProjectGenius-Frontend/public/css/teacher-details.css
+++ b/ProjectGenius-Frontend/public/css/teacher-details.css
@@ -170,13 +170,26 @@
     margin: 10px 0px;
 }
 .tchr-name {
-    width: 300px;
-    text-align: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 .tchr-name p:first-child {
     color: #ff6995;
     font-size: 20px;
     font-weight: 900;
+    line-height: 1.5;
+}
+.tchr-name p:nth-child(2) {
+    color: rgb(74, 134, 249);
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.5;
+}
+.tchr-name p:nth-child(3) {
+    font-size: 12px;
+    line-height: 1.2;
 }
 .tchr-adrs {
     width: 230px;
@@ -335,7 +348,6 @@
 }
 @media(max-width:1050px){
     .tchr-name {
-        width: 250px;
         font-size: 12px;
     }
     .tchr-name p:first-child {
@@ -360,13 +372,9 @@
         font-size: 13px;
     }
     .doc-profile img {
-        position: absolute;
         width: 100px;
-        top: 50px;
-        left: 20px;
     }
     .tchr-name {
-        width: 220px;
         font-size: 11px;
     }
     .tchr-adrs span {
