--- a/ProjectGenius-Frontend/public/css/teacher-details.css
+++ b/ProjectGenius-Frontend/public/css/teacher-details.css
@@ -277,14 +277,82 @@
  ul li:nth-child(3){
     color: #f93333;
 }
+.attendan
+ ul li:nth-child(4){
+    color: #40997e;
+}
+.attendan
+ ul li:nth-child(5){
+    color: #e2a925; 
+}
+.attendan
+ ul li:nth-child(6){
+    color: #f93333;
+}
+.attendan
+ ul li:nth-child(7){
+    color: #40997e;
+}
+.attendan
+ ul li:nth-child(8){
+    color: #e2a925;
+}
 .schedule {
-    padding: 4px 10px;
     border-radius: 5px;
     border: 1px solid;
-    background:#f2eaff ;
-    color:#8147e7;
+    background: #f2eaff;
+    color: #8147e7;
     cursor: pointer;
-    margin-top: 8px;
+    position: absolute;
+    right: 28px;
+    height: 25px;
+    font-size: 11px;
+    top: 3px;
+    padding: 0px 5px;
+}
+.schedule-list {
+    overflow-y: scroll;
+    height: 63px;
+    padding:0px 10px;
+}
+.schedule-list::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+   /* Track  */
+.schedule-list::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 3px #bababa; 
+    border-radius: 10px;
+  }
+   
+   /* Handle  */
+.schedule-list::-webkit-scrollbar-thumb {
+    background: #012a70ba; 
+    border-radius: 10px;
+  }
+table.status-table {
+    width: 90%;
+    border-collapse: separate;
+    text-align: center;
+    border-spacing: 0px 4px;
+    font-size: 12px;
+    margin-left: 10px;
+}
+.status-table th {
+    color: brown;
+    text-align: center;
+    padding: 0px 9px;
+}
+tr.status-table-row {
+    background: bisque;
+    font-size: 12px;
+    text-align: center;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .5s;
+}
+.status-table-row:hover{
+    box-shadow: 0px 4px 5px #cacbcd;
 }
 .att {
     position: relative;
@@ -345,6 +413,59 @@
     align-items: center;
     justify-content: center;
     justify-content: space-evenly;
+}
+ /* teacher attendance  */
+.teacher-attendance {
+    width: 90%;
+    background: #ffffff;
+    padding: 0px 0px 25px 0px;
+    border-radius: 0px 0px 7px 7px;
+    position: relative;
+}
+
+.att-button {
+    padding: 0px 5px;
+    border-radius: 5px;
+    border: 1px solid;
+    background-color: #12e70f20;
+    color: #12e70f;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 11px;
+    height: 25px;
+}
+
+.calender-over-lay {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #00000080;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.calender-close {
+    padding: 4px 18px;
+    border-radius: 5px;
+    border: none;
+    background-color: #e70f0f;
+    color: #ffffff;
+    cursor: pointer;
+    margin: 0px 5% 16px 0px;
+    align-self: self-end;
+}
+.att div:first-child {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    margin: 2px 0px;
 }
 @media(max-width:1050px){
     .tchr-name {
