--- a/ProjectGenius-Frontend/public/css/fee-setup.css
+++ b/ProjectGenius-Frontend/public/css/fee-setup.css
@@ -248,20 +248,24 @@
     padding: 0.5rem 0;
 }
 
-.teacher-schedule-form {
+.teacher-schedule-container form {
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     width: 90%;
     margin-bottom: 1rem;
 }
 
-.teacher-schedule-input {
+.teacher-schedule-details {
     width: 40%;
+}
+
+.teacher-schedule-input {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    margin: 8px 0px;
+    margin: 8px 6px;
 }
 
 .teacher-schedule-input label {
@@ -279,35 +283,59 @@
     padding-left: 10px;
 }
 
+.teacher-schedule-actions {
+    width: 55%;
+}
+
 .teacher-schedule-controls {
     display: flex;
     justify-content: space-between;
-    width: 40%;
-}
-
-.teacher-schedule-controls .teacher-schedule-input {
-    width: 46%;
-}
-
-.teacher-schedule-controls .class-section-input {
-    width: 25%;
-}
-
-.teacher-schedule-btn {
-    width: 90%;
-    display: flex;
-    justify-content: space-around;
     align-items: center;
+    width: 100%;
 }
 
-.teacher-schedule-btn button {
-    width: 150px;
-    border-radius: 16px;
+.teacher-schedule-controls button {
+    /* border-radius: 8px;
     background: #ff80a6;
     color: white;
-    padding: 5px 0px;
+    padding: 8px 10px;
     border: none;
+    margin: 17px 0px 0px 6px; */
+    align-self: flex-end;
+    margin-bottom: 8px;
 }
+
+.submit-err-text {
+    color: red;
+    font-size: 12px;
+    animation: blink 1.5s infinite ease-in-out;
+    margin-top: 8px;
+}
+
+.teacher-allocation-input{
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    margin: 8px 6px;
+}
+.teacher-allocation-input input {
+    height: 33px;
+    border: 1px solid #c1bbeb;
+    border-radius: 4px;
+    outline: none;
+    padding-left: 10px;
+}
+@keyframes blink {
+    0% {
+        transform: scale(1.1);
+    }
+    50% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1.1);
+    }
+  }
 
 /* Timetable Preview Style */
 
@@ -341,6 +369,7 @@
     padding: 5px 0px;
     border: none;
 }
+
 .del-btn {
     color: #eb1515;
     border: none;
