--- a/ProjectGenius-Frontend/public/css/attendance-mark.css
+++ b/ProjectGenius-Frontend/public/css/attendance-mark.css
@@ -56,6 +56,7 @@
     font-weight: 900;
 }
 .scl-std {
+    position: relative;
     margin-right: 30px;
 }
 .scl-std span {
@@ -676,3 +677,173 @@
     font-weight: 400;
 }
 /* Edit Mark PopUp Style */
+
+/* Nav Setting Pop Up */
+
+.nav-setting {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    box-shadow: 4px 1px 5px 0px #c3c3c3;
+    background-color: #ffffff;
+    overflow: hidden;
+    border-radius: 20px;
+    width: 250px;
+    right: 8%;
+    top: 50px;
+    z-index: 999;
+}
+
+.nav-setting-close-btn {
+    outline: none;
+    border: none;
+    background-color: transparent;
+    color: #1c1c1c;
+    cursor: pointer;
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    right: 10px;
+    margin: 10px;
+    font-size: 26px;
+}
+
+.nav-setting-container::before {
+    content: "";
+    background-color: #f9f6b8;
+    box-shadow: 1px 1px 2px 0px #c3c3c3;
+    height: 90px;
+    width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.nav-setting-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.nav-setting-content {
+    position: relative;
+    top: -35px;
+}
+
+.nav-setting-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-bottom: 12px;
+}
+
+.nav-setting-header img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    box-shadow: 1px 1px 2px 0px #c3c3c3;
+}
+
+.nav-setting-header p {
+    color: #012970;
+    font-weight: 600;
+    font-size: 18px;
+    margin: 8px 0px;
+}
+
+.nav-setting-header span {
+    color: #858585;
+    font-weight: 600;
+    font-size: 16px;
+    display: inline-block;
+    margin-bottom: 8px;
+}
+
+.nav-setting-controls {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-setting-button {
+    position: relative;
+    display: flex;
+    align-items: center;
+    align-self: flex-start;
+    gap: 4px;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    overflow: hidden;
+    font-size: 16px;
+    white-space: nowrap;
+    margin-top: 8px;
+    font-weight: 500;
+}
+
+.nav-setting-button::after {
+    content: "";
+    position: absolute;
+    top: 23px;
+    left: 0;
+    background-color: #000000;
+    height: 1px;
+    width: 0;
+    transition: width 0.3s ease-in-out;
+}
+
+.nav-setting-button:hover::after {
+    width: 90%;
+}
+
+@media (max-width: 600px) {
+    .nav-setting {
+        border-radius: 16px;
+        width: 190px;
+    }
+    .nav-setting-header img {
+        width: 40px;
+        height: 40px;
+    }
+    .nav-setting-header p {
+        font-size: 14px;
+        margin: 6px 0px;
+    }
+    .nav-setting-header span {
+        font-size: 12px;
+        margin-bottom: 6px;
+    }
+    .nav-setting-container::before {
+        height: 60px;
+    }
+    .nav-setting-content {
+        position: relative;
+        top: -25px;
+    }
+    .nav-setting-close-btn {
+        font-size: 20px;
+    }
+    .nav-setting-button {
+        font-size: 12px;
+    }
+}
+.nav-setting-overlay {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    left: 0;
+}
+
+/* Nav Setting Pop Up */
+
+
