--- a/ProjectGenius-Frontend/public/css/parent.css
+++ b/ProjectGenius-Frontend/public/css/parent.css
@@ -112,7 +112,7 @@
 .homepage-menu-section {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(2, minmax(50%, 1fr));
+    grid-template-columns: repeat(2, minmax(45%, 1fr));
     gap: 12px;
     margin-top: 16px;
 }
@@ -128,6 +128,7 @@
     height: 150px;
     box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
     margin-bottom: 12px;
+    cursor: pointer;
 }
 
 .homepage-menu-section > .homepage-menu > img {
@@ -144,6 +145,55 @@
     font-weight: 500;
 }
 
+.homepage-no-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.homepage-no-menu > .homepage-no-menu-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    height: 100%;
+    width: 100%;
+    background-color: #00000030;
+}
+
+.homepage-no-menu > .no-menu-msg-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 1.5rem;
+    background-color: #ffffff;
+    box-shadow: 0px 7px 29px 0px #64646F33;
+    border-radius: 1rem;
+    position: relative;
+    z-index: 1001;
+}
+
+.homepage-no-menu > .no-menu-msg-container > img {
+    height: 180px;
+    width: 180px;
+}
+
+.homepage-no-menu > .no-menu-msg-container > h3 {
+    font-family: 'Poppins';
+    font-size: 16px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.homepage-no-menu > .no-menu-msg-container > p {
+    font-family: 'Poppins';
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    
+}
+
 /* Live Tracking Page Styles */
 
 .live-tracking-page {
@@ -153,8 +203,28 @@
     background-color: #FFFCFD;
 }
 
+.route-tracking-form {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    font-family: 'Poppins';
+    z-index: 999;
+    background-color: #fff;
+    padding: 16px 12px;
+    width: 100%;
+}
+
+.route-tracking-form > div {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
 .bus-tracking-info {
-    position: sticky;
+    position: fixed;
     bottom: 0;
     height: 80vh;
     width: 100%;
@@ -477,7 +547,9 @@
 
 .bus-details-container > .bus-details-card > .details-card-container > hr {
     margin: 0;
-    background: #EBEBF0;
+    background: #a4a4a4;
+    height: 1px;
+    border: none;
 }
 
 .bus-details-container > .bus-incharge-container {
@@ -673,3 +745,72 @@
 .student-profile-container > .student-detailed-info > table td {
     font-size: 18px;
 }
+
+/* Bus Attendance Page */
+.bus-attendance-page {
+    background-color: #FFFFFF;
+    height: 100dvh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: auto;
+}
+
+.bus-attendance-container {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+}
+
+.bus-attendance-container > .bus-missed-notify-container  {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin: 12px 0;
+}
+
+.bus-attendance-container > .bus-missed-notify-container > .bus-missed-notification {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    gap: 14px;
+}
+
+.bus-attendance-container > .bus-missed-notify-container > .bus-missed-notification > p {
+    font-family: 'Poppins';
+    font-size: 18px;
+    text-align: center;
+    display: grid;
+    place-items: center;
+    color: #263238;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    
+}
+
+.bus-attendance-container > .bus-missed-notify-container > .bus-missed-notification > .notification-message {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px 14px;
+    border-radius: 6px;
+    flex: 1 1 0;
+}
+
+.bus-attendance-container > .bus-missed-notify-container > .bus-missed-notification > .notification-message > h3 {
+    font-family: 'Poppins';
+    font-size: 14px;
+    font-weight: 600;
+    color: #595959;  
+}
+
+.bus-attendance-container > .bus-missed-notify-container > .bus-missed-notification > .notification-message > p {
+    font-family: 'Poppins';
+    font-size: 12px;
+    font-weight: 400;
+    color: #A3A3A3;
+}
+
